# djazzle

./: .gitignore  CUSTOM_CONNECTIONS.md  LICENSE  README.md  TESTING.md  main.py  pyproject.toml  run_benchmarks.py  runtests.py  tox.ini
.github/workflows/: README.md  tests.yml
benchmarks/: .gitignore  README.md  __init__.py  benchmark_runner.py  query_benchmarks.py
src/djazzle/: __init__.py  columns.py  conditions.py  connection.py  exceptions.py  query.py  table.py  types.py  typing_utils.py  utils.py
tests/: README_CUSTOM_CONNECTIONS.md  apps.py  conftest.py  models.py  test_async.py  test_delete.py  test_insert.py  test_psycopg2_connection.py  test_psycopg3_connection.py  test_select.py  test_settings.py  test_update.py  tests.py  tests_old.py
tests/migrations/: 0001_init.py
