[project]
name = "djazzle"
version = "0.1.0"
description = "djazzle is a django query builder inspired by drizzle-orm"
readme = "README.md"
authors = [
    { name = "Brady", email = "bfendres@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "django>=4.2",
    "psycopg[binary]>=3.2.12",
]

[project.scripts]
djazzle = "djazzle:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
