[project]
name = "djazzle"
version = "0.1.0"
description = "djazzle is a django query builder inspired by drizzle-orm"
readme = "README.md"
authors = [
    { name = "Brady", email = "bfendres@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "asyncio>=4.0.0",
    "django>=4.2",
    "psycopg[binary]>=3.2.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-django>=4.5.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.1.0",
]
testcontainers = [
    "testcontainers[mysql,postgres]>=4.13.2",
]

[project.scripts]
djazzle = "djazzle:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "tests.test_settings"
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
testpaths = ["tests"]
addopts = "-v --tb=short"
pythonpath = ["."]

[tool.pytest_asyncio]
mode = "auto"

[dependency-groups]
dev = [
    "psycopg>=3.2.12",
    "psycopg2-binary>=2.9.11",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
    "pytest-cov>=7.0.0",
    "pytest-django>=4.11.1",
    "ruff>=0.14.3",
]
